--- a/static_content/manage.html.example
+++ b/static_content/manage.html.example
@@ -6,7 +6,7 @@
 	<script src="scripts/jquery.min.js"></script>
 	<!-- <link rel="stylesheet" href="styles/pure-min.css"> -->
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-	<script src="bootstrap/js/bootstrap.min.js">/</script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<style>
 
 		input.form-control {
@@ -47,7 +47,7 @@
 		<div class="jumbotron first">
 			<h1>&nbsp;</h1>
 			<p class="lead"></p>
-			<p>	
+			<p>
 
 				<form class="form-inline" role="form">
 					  <div class="form-group">
