--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "feedparser": "^1.0.0",
     "jade": "^1.5.0",
     "moment": "^2.8.3",
     "phantom": "^0.7.2",
