--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cson": "^2.0.0",
+    "feedparser": "^1.0.1",
     "jade": "^1.5.0",
     "moment": "^2.8.3",
     "phantom": "^0.7.2",
