--- a/package.json
+++ b/package.json
@@ -34,9 +34,24 @@
     "node-jsx": "^0.13.3",
     "phantom": "^0.7.2",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "request": "^2.57.0",
     "season": "^5.3.0",
     "serialize-javascript": "^1.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^1.9.11"
+  },
+  "devDependencies": {
+    "babel-core": "^5.5.8",
+    "babel-loader": "^5.1.4",
+    "del": "^1.2.0",
+    "envify": "^3.4.0",
+    "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-webpack": "^1.5.0",
+    "jsx-loader": "^0.13.2",
+    "node-libs-browser": "^0.5.2",
+    "transform-loader": "^0.2.2",
+    "webpack": "^1.9.11"
   }
 }
