--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.12.4",
     "flux-router-component": "^0.5.18",
     "fluxible": "^0.4.10",
+    "fluxible-plugin-fetchr": "^0.3.1",
     "fluxible-plugin-routr": "^0.3.0",
     "ioredis": "^1.5.0",
     "jade": "^1.11.0",
