--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "co": "^4.5.4",
     "co-request": "^0.2.1",
     "cson": "^3.0.1",
+    "csurf": "^1.8.3",
     "debug": "^2.2.0",
     "express": "^4.12.4",
     "flux-router-component": "^0.5.18",
