--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/larvata/tentoumu-chu",
   "dependencies": {
+    "body-parser": "^1.13.1",
     "cheerio": "^0.19.0",
     "co": "^4.5.4",
     "co-request": "^0.2.1",
