--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/larvata/tentoumu-chu",
   "dependencies": {
+    "babel": "^5.6.14",
     "body-parser": "^1.13.1",
     "cheerio": "^0.19.0",
     "cookie-parser": "^1.3.5",
