--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.13.1",
     "cheerio": "^0.19.0",
     "cookie-parser": "^1.3.5",
+    "core-js": "^0.9.18",
     "cson": "^3.0.1",
     "csurf": "^1.8.3",
     "debug": "^2.2.0",
